# forge

./: .coverage  ARCHITECTURE.md  BASELINE.md  CHANGELOG.md  CONCURRENCY.md  CONTRIBUTING.md  PERFORMANCE.md  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ci.yml.txt
forge/: __init__.py  __main__.py  cli.py  cli_enrich.py  cli_helpers.py  cli_parsers.py  config.py  db.py  db_io.py  db_schema.py  errors.py  mcp_server.py  monitor.py
forge/adapters/: __init__.py  claude.py  ollama.py
forge/core/: __init__.py  agent_loop.py  context_manager.py  output_parser.py  tool_registry.py
forge/dashboard/: app.py
forge/discovery/: overture.py
forge/enrichment/: __init__.py  pipeline.py  prompts.py
forge/importers/: fcc_uls.py  npi_registry.py  sam_gov.py  smtp_verifier.py
forge/safety/: audit_agent.py  error_recovery.py
forge/tests/: conftest.py  test_adapters.py  test_agent_loop.py  test_audit_agent.py  test_cli.py  test_cli_utils.py  test_config.py  test_context_manager.py  test_database_tools.py  test_db_core.py  test_db_enrichment.py  test_discovery.py  test_error_recovery.py  test_importers.py  test_mcp.py  test_monitor.py  test_output_parser.py  test_pipeline.py  test_prompts.py  test_sam_gov.py  test_security.py  test_smoke.py  test_tool_registry.py  test_web_scraper.py
forge/tools/: __init__.py  database.py  web_scraper.py
